--- a/index.html
+++ b/index.html
@@ -537,10 +537,10 @@ Alat bantu evaluasi dengan metode integrasi mudlog, Composition Fluid Analysis (
             </label>
             <select id="mudlogScore">
               <option value="">Pilih kondisi mudlog…</option>
-              <option value="8">8 – OS kuat / oil show sangat jelas</option>
-              <option value="6">6 – gas peak + indikasi oil show moderat</option>
-              <option value="4">4 – gas peak tanpa indikasi oil yang jelas</option>
-              <option value="2">2 – tidak ada mudlog / indikasi sangat lemah</option>
+              <option value="8">8 – Gas peak dengan indikasi Oil show </option>
+              <option value="6">6 – Gas peak Tanpa indikasi Oil Show </option>
+              <option value="4">4 – Tidak indikasi Gas peak </option>
+              <option value="2">2 – Tidak ada mudlog </option>
             </select>
           </div>
 
