--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             berbasis Metode JUMBO
           </h1>
           <p class="hero-subtitle">
-Alat bantu evaluasi dengan metode integrasi mudlog, Composition Fluid Analysis (CFA), dan korelasi geologi yang digunakan untuk mengidentifikasi hidden oil pada lapisan potensi gas. Scoring Jumbo mampu memberikan probabilitas tipe fluida (oil/gas) secara lebih objektif dan cepat tanpa memerlukan logging tambahan
+Alat bantu evaluasi potensi gas dan minyak dengan integrasi data Mudlog, Composition Fluid Analysis (CFA), dan korelasi geologi yang digunakan untuk mengidentifikasi hidden oil pada lapisan potensi gas. Scoring Jumbo mampu memberikan probabilitas tipe fluida (oil/gas) secara lebih objektif dan cepat tanpa memerlukan logging tambahan
 .
           </p>
 
@@ -538,8 +538,8 @@ Alat bantu evaluasi dengan metode integrasi mudlog, Composition Fluid Analysis (
             <select id="mudlogScore">
               <option value="">Pilih kondisi mudlog…</option>
               <option value="8">8 – Gas peak dengan indikasi Oil show </option>
-              <option value="6">6 – Gas peak Tanpa indikasi Oil Show </option>
-              <option value="4">4 – Tidak indikasi Gas peak </option>
+              <option value="6">6 – Gas peak tanpa indikasi Oil Show </option>
+              <option value="4">4 – Tidak ada Gas peak </option>
               <option value="2">2 – Tidak ada mudlog </option>
             </select>
           </div>
@@ -551,9 +551,9 @@ Alat bantu evaluasi dengan metode integrasi mudlog, Composition Fluid Analysis (
             </label>
             <select id="cfaScore">
               <option value="">Pilih pola LFA–CFA…</option>
-              <option value="10">10 – C6+ jelas, wetness tinggi (oil-prone)</option>
-              <option value="6">6 – data sedang / indikasi campuran oil–gas / No CFA</option>
-              <option value="2">2 – gas-like (C1–C5 dominan, tanpa C6+)</option>
+              <option value="10">10 – C6+ jelas (oil-prone)</option>
+              <option value="6">6 – No CFA data </option>
+              <option value="2">2 – C1–C5 dominan, tanpa C6+</option>
             </select>
           </div>
 
@@ -566,8 +566,8 @@ Alat bantu evaluasi dengan metode integrasi mudlog, Composition Fluid Analysis (
             <select id="corrScore">
               <option value="">Pilih hasil korelasi…</option>
               <option value="10">10 – Updip tank proven oil / dinamik sangat mendukung</option>
-              <option value="6">6 – Non proven oil/gas tank / korelasi sedang</option>
-              <option value="2">2 – Downdip tank gas / updip tank water / dinamik tidak mendukung</option>
+              <option value="6">6 – Non proven oil/gas tank / single tank</option>
+              <option value="2">2 – Downdip tank gas / updip tank water</option>
             </select>
           </div>
 
