--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             berbasis Metode JUMBO
           </h1>
           <p class="hero-subtitle">
-Alat bantu evaluasi potensi gas dan minyak dengan integrasi data Mudlog, Composition Fluid Analysis (CFA), dan korelasi geologi yang digunakan untuk mengidentifikasi hidden oil pada lapisan potensi gas. Scoring Jumbo mampu memberikan probabilitas tipe fluida (oil/gas) secara lebih objektif dan cepat tanpa memerlukan logging tambahan
+Identifikasi potensi minyak tersembunyi secara cepat dan akurat menggunakan skema skoring terintegrasi untuk mendukung keputusan workover yang lebih tepat.
 .
           </p>
 
@@ -698,3 +698,4 @@ Alat bantu evaluasi potensi gas dan minyak dengan integrasi data Mudlog, Composi
 </body>
 </html>
 jumbo
+
