--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
           </h1>
           <p class="hero-subtitle">
 Identifikasi potensi minyak tersembunyi secara cepat dan akurat menggunakan skema skoring terintegrasi untuk mendukung keputusan workover yang lebih tepat.
-.
+
           </p>
 
           <div class="hero-badges">
@@ -512,9 +512,9 @@ Identifikasi potensi minyak tersembunyi secara cepat dan akurat menggunakan skem
         <section class="card" aria-label="Kalkulator Metode JUMBO">
           <div class="card-header">
             <div>
-              <div class="card-title">Kalkulator Metode JUMBO</div>
+              <div class="card-title">Scoring JUMBO</div>
               <div class="card-subtitle">
-                Skor JUMBO = (Mudlog × 20%) + (LFA–CFA × 30%) + (Korelasi &amp; Dinamik × 50%)
+                Masukkan data sumur dan lapisan untuk mendapatkan hasil skor Jumbo
               </div>
             </div>
             <div class="chip-small">Screening Tool</div>
@@ -698,4 +698,5 @@ Identifikasi potensi minyak tersembunyi secara cepat dan akurat menggunakan skem
 </body>
 </html>
 jumbo
+
 
